sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:28: error: ';' expected but 'while' found.
  }while((ecart>1)||(!sortie))
   ^